--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h1{
 }
 p{
     text-align:center ;
-    color:lawngreen;
+    color: darkblue;
     font-size: xx-large;
     font-weight: 500;
     font-style: italic;
